# sync-pre-commit-hooks

./: .copier-answers.yml  .cruft.json  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .pre-commit-hooks.yaml  .pylintrc.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  noxfile.py  pyproject.toml  ruff.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  update-package-version.yml
config/: recipe-append.yaml
docs/: conf.py
docs/examples/: example-usage.md
docs/reference/: index.md
requirements/: pre-commit-additional-dependencies.txt  py310-test-extras.yaml  py310-test.yaml  py311-test-extras.yaml  py311-test.yaml  py312-test-extras.yaml  py312-test.yaml  py313-dev.yaml  py313-test-extras.yaml  py313-test.yaml  py314-dev.yaml  py314-test-extras.yaml  py314-test.yaml  py39-test-extras.yaml  py39-test.yaml  uvx-tools.txt
requirements/lock/: pre-commit-additional-dependencies.txt  uvx-tools.txt
src/pre_commit_hooks/: __init__.py  _typing.py  _typing_compat.py  _utils.py  apply_command.py  cli.py  core.py  fill_pre_commit_deps.py  justfile_format.py  resolve_dependencies.py  sync_pre_commit_deps.py  sync_pre_commit_language_version.py  sync_uv_dependency_groups.py  sync_uv_dependency_groups_min_python.py
src/sync_pre_commit_hooks/: __init__.py  _compat.py  _logging.py  _utils.py  apply_command.py  check_file_extension.py  fill_pre_commit_deps.py  resolve_dependencies.py  sync_pre_commit_deps.py  sync_pre_commit_language_version.py  sync_pyproject_min_versions.py  sync_uv_build_deps.py  sync_uv_dependency_groups.py
tests/: __init__.py  _utils.py  conftest.py  test__utils.py  test_apply_command.py  test_check_file_extension.py  test_fill_pre_commit_deps.py  test_pre_commit_hooks.py  test_resolve_dependencies.py  test_sync_pre_commit_deps.py  test_sync_pre_commit_hooks.py  test_sync_pre_commit_language_version.py  test_sync_pyproject_min_version.py  test_sync_uv_build_deps.py  test_sync_uv_dependency_groups.py  test_sync_uv_dependency_groups_min_python.py
tests/data/: requirements-ruff.txt  simple-pre-commit-config.yaml
tools/: requirements_lock.py  shared.just  sync_readme_rev_version.py  typecheck.py
