[build-system]
build-backend = "uv_build"
requires = [
    "uv-build>=0.11.10,<0.12.0",
]

[project]
name = "sync-pre-commit-hooks"
version = "0.5.1"
description = "Some useful pre-commit hooks dependencies, etc."
readme = "README.md"
keywords = [
    "sync-pre-commit-hooks",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # core dependencies
]

[project.optional-dependencies]
all = [
    "dependency-groups>=1.3.1",
    "packaging>=26.0",
    "requirements-parser>=0.13.0",
    "ruamel-yaml>=0.19.1",
    "tomli>=2.4.1; python_version<'3.11'",
    "tomlkit>=0.14.0",
    "typing-extensions>=4.15.0; python_version<'3.12'",
]
complete = [
    "sync-pre-commit-hooks[all,lastversion]>=0.4.0",
]
lastversion = [
    "lastversion>=3.6.10",
]

[project.scripts]
apply-command = "sync_pre_commit_hooks.apply_command:main"
fill-pre-commit-deps = "sync_pre_commit_hooks.fill_pre_commit_deps:main"
sync-pre-commit-deps = "sync_pre_commit_hooks.sync_pre_commit_deps:main"
sync-pre-commit-language-version = "sync_pre_commit_hooks.sync_pre_commit_language_version:main"
sync-uv-dependency-groups = "sync_pre_commit_hooks.sync_uv_dependency_groups:main"
sync-uv-build-deps = "sync_pre_commit_hooks.sync_uv_build_deps:main"

[project.urls]
Documentation = "https://pages.nist.gov/sync-pre-commit-hooks/"
Homepage = "https://github.com/wpk-nist-gov/sync-pre-commit-hooks"

[dependency-groups]
dev = [
    { include-group = "cog" },
    { include-group = "mypy" },
    { include-group = "nox" },
    { include-group = "test" },
    { include-group = "type" },
]
test = [
    "pytest-cov>=7.1.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    { include-group = "optional-dependencies" },
    { include-group = "pytest" },
]
type = [
    { include-group = "nox" },
    { include-group = "optional-dependencies" },
    { include-group = "pylint" },
    { include-group = "pytest" },
    { include-group = "typecheck-runner" },
]
# other groups
basedpyright = [ "basedpyright>=1.39.0" ]
cog = [ "cogapp>=3.6.0" ]
ipython = [ "ipython>=9.12.0" ]
mypy = [ "mypy[faster-cache]>=1.20.2" ]
nox = [ "nox>=2026.4.10" ]
optional-dependencies = [ "sync-pre-commit-hooks[complete]" ]
pylint = [ "pylint>=4.0.5" ]
pytest = [ "pytest>=9.0.2" ]
test-extras = [
    { include-group = "test" },
]
typecheck-runner = [ "typecheck-runner>=0.2.0; python_version>'3.9'" ]

# * uv -------------------------------------------------------------------------
[tool.uv]
required-version = ">=0.11.8"
default-groups = [ "dev" ]
fork-strategy = "requires-python"
exclude-newer = "7 days"
managed = true
build-backend.source-include = [ "tests/**" ]
pip.annotation-style = "line"
pip.generate-hashes = true

[tool.uv.dependency-groups]
cog.requires-python = ">=3.14"
dev.requires-python = ">=3.14"
ipython.requires-python = ">=3.14"
mypy.requires-python = ">=3.14"
nox.requires-python = ">=3.14"

# * Checks ---------------------------------------------------------------------
[tool.repo-review]
ignore = [
    "NOX103", # I prefer using "nox.options.sessions"
    "PC111",  # use doccmd instead of blacken-docs
    "PC140",  # do this externally
    "PC160",  # use typos
    "PC170",  # pygrep
    "PY004",  # no docs for this
]

[tool.check-wheel-contents]
src_dir = [ "src" ]
toplevel = [ "sync_pre_commit_hooks" ]

[tool.pyproject-fmt]
# max_supported_python = "3.13"
expand_tables = [
    "project.entry-points",
    "project.optional-dependencies",
    "project.scripts",
    "project.urls",
    "tool.mypy.overrides",
    "tool.pyproject2conda",
    "tool.pyright.executionEnvironments",
    "tool.pytest",
    "tool.typos",
    "tool.uv.dependency-groups",
]
indent = 4
keep_full_version = true

[tool.typos.default.extend-identifiers]
CPY = "CPY"

# * typecheck ---------------------------------------------------------------------
[tool.mypy]
files = [
    "src",
    "tests",
    # tools
    "noxfile.py",
    "tools",
]
strict = true
# options
check_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [ "lastversion.*" ]
ignore_missing_imports = true

[tool.pyrefly]
enabled-ignores = [ "pyrefly" ]
project-includes = [
    "src",
    "tests",
    # tools
    "noxfile.py",
    "tools",
]
search-path = [ "." ]

[tool.pyright]
exclude = [
    "**/.mypy_cache",
    "**/.numba_cache",
    "**/__pycache__",
    ".nox/**",
    ".tox/**",
    ".venv/**",
]
include = [
    "src",
    "tests",
    # tools
    "noxfile.py",
    "tools",
]
typeCheckingMode = "strict"
# options
# reportMissingSuperCall = true
deprecateTypingAliases = true
enableReachabilityAnalysis = false
enableTypeIgnoreComments = false
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImportCycles = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = "warning"
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUnusedCallResult = true
# type-checkers should type-check; linters should lint
reportImplicitStringConcatenation = false
reportPrivateImportUsage = false
reportPrivateUsage = false
reportUnusedImport = false
reportUnusedVariable = false

[[tool.pyright.executionEnvironments]]
reportUnusedCallResult = false
root = "tests"

[tool.ty]
# Disable support for `type: ignore` comments
analysis.respect-type-ignore-comments = false
src.include = [
    "src",
    "tests",
    # tools
    "noxfile.py",
    "tools",
]

# * Testing --------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = [
    "--cov-config=pyproject.toml",
    "--doctest-glob=*.md",
    "--doctest-modules",
    "--pyargs",
    "--strict-config",
    "--strict-markers",
    "-ra",
]
testpaths = [
    "README.md",
    "sync_pre_commit_hooks",
    "tests",
]
# options
filterwarnings = [ "error" ]
log_cli_level = "INFO"
log_level = "INFO"
minversion = "8"
strict_xfail = "true"

[tool.coverage]
run.branch = true
run.source = [
    "sync_pre_commit_hooks",
]
paths.source = [
    "src/",
    # needed for non editable doctests
    ".nox/**/site-packages/",
    "*/.nox/**/site-packages",
    "*/src",
]
report.exclude_also = [
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]
report.include = [
    "src/*",
]
report.omit = [
    "*/_typing.py",
    "*/vendored/*",
]
report.show_missing = true

# * Dependency creation --------------------------------------------------------
[tool.pyproject2conda]
user-config = "config/userconfig.toml"
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }

[tool.pyproject2conda.envs.dev]
groups = "dev"

[tool.pyproject2conda.envs.test]
groups = "test"
python = "all"

[tool.pyproject2conda.envs.test-extras]
groups = "test-extras"
python = "all"
skip-package = true

[tool.pyproject2conda.envs.uvx-tools]
reqs = [
    # these used solely for specking tools to be run via uvx ...
    "conda-lock>=4.0.0",
    "copier-template-extensions>=0.3.3",
    "copier>=9.15.0",
    "grayskull>=3.1.1",
    "prek>=0.3.11",
    "pyrefly>=0.63.1",
    "pyright>=1.1.409",
    "rooster>=0.1.1",
    "twine>=6.2.0",
    "ty>=0.0.34",
]
groups = [
    "basedpyright",
    "mypy",
    "nox",
    "typecheck-runner",
]
skip-package = true
style = "requirements"

# * Other tools ----------------------------------------------------------------
[tool.commitizen]
use_shortcuts = true

[tool.rooster]
changelog_contributors = true
major-labels = [ "breaking" ]
minor_labels = [ "enhancement" ]
patch-labels = [ "bug", "documentation" ]
# options
ignore-labels = [ "internal" ]
require-labels = [ "breaking", "bug", "documentation", "enhancement" ]
version_files = [
    "pyproject.toml",
]
# sections
section-labels."Breaking changes" = [ "breaking" ]
section-labels."Bug fixes" = [ "bug" ]
section-labels.Documentation = [ "documentation" ]
section-labels.Enhancements = [ "enhancement" ]
section-labels.Internal = [ "internal" ]
section-labels."Other changes" = [ "__unknown__" ]
